Responsive grid + Fixes
Added the code to make the gallery image grid responsive. Images will alternate between four, two, and one column depending on viewport size. Fixed some overflow scrollbars on some containers and a display overlook. Fixed something overlaying the sidebar making it so you coudn't click things. Changed the sidebar to be sticky on mobile so it doesn't appear over the images or text. Added a switch statement to the gallery script to only run the gallery function when on desktop. Need to make the images appear properly still.

--- a/style.css
+++ b/style.css
@@ -120,6 +120,7 @@ p {
   position: fixed;
   height: 100%;
   overflow: auto;
+  z-index: 3;
 }
 
 .sidebar-container .title {
@@ -169,6 +170,7 @@ p {
 	position: fixed;
 	width: 100%;
 	height: 100%;
+	overflow: auto;
 }
 
 .gallery-container {
@@ -219,12 +221,13 @@ p {
 .overlay-control-right {
 	position: absolute;
 	margin: 28px 0;
-	height: 95%;
+	height: 90%;
 	z-index: 2;
 }
 
 .gallery-grid-container {
-	overflow: auto;
+	display: none;
+	/*overflow: auto;*/
 	margin-left: 400px;
 	max-height: 100%;
 }
@@ -250,10 +253,24 @@ p {
 	cursor: pointer;
 }
 
+@media screen and (max-width: 1350px) {
+	.gallery-grid-column {
+		flex: 50%;
+		max-width: 50%;
+	}
+}
+
+@media screen and (max-width: 1050px) {
+	.gallery-grid-column {
+		flex: 100%;
+		max-width: 100%;
+	}
+}
+
 /* === ABOUT === */
 
 .text-container {
-	margin: 64px 28px 64px 0px;
+	margin: 64px 28px 64px 400px;
 	max-width: 800px;
 }
 
@@ -291,7 +308,10 @@ p {
 		width: 100%;
 		min-width: 200px;
 		height: auto;
-		position: relative;
+		position: -webkit-sticky;
+		position: sticky;
+		top: 0;
+		background-color: white;
 	}
 
 	.homepage-header .title {
@@ -336,8 +356,26 @@ p {
 
 	/* === MOBILE GALLERY === */
 
+	.content-container {
+		position: relative;
+	}
+
 	.gallery-container {
 		margin: 16px;
+	}
+
+	.overlay-control-left,
+	.overlay-control-center,
+	.overlay-control-right {
+		display: none;
+	}
+
+	.gallery-img {
+		
+	}
+
+	.gallery-grid-container {
+		margin: 0;
 	}
 
 	/* === MOBILE ABOUT === */
